# python/libraos/_generated/models/create_eval_suite_revision_body.py
@@ -1,0 +1,94 @@
+from __future__ import annotations
+
+from collections.abc import Mapping
+from typing import TYPE_CHECKING, Any, TypeVar
+
+from attrs import define as _attrs_define
+from attrs import field as _attrs_field
+
+from ..types import UNSET, Unset
+
+if TYPE_CHECKING:
+    from ..models.eval_case import EvalCase
+
+
+T = TypeVar("T", bound="CreateEvalSuiteRevisionBody")
+
+
+@_attrs_define
+class CreateEvalSuiteRevisionBody:
+    """
+    Attributes:
+        name (str):
+        cases (list[EvalCase]):
+        description (str | Unset):
+    """
+
+    name: str
+    cases: list[EvalCase]
+    description: str | Unset = UNSET
+    additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
+
+    def to_dict(self) -> dict[str, Any]:
+        name = self.name
+
+        cases = []
+        for cases_item_data in self.cases:
+            cases_item = cases_item_data.to_dict()
+            cases.append(cases_item)
+
+        description = self.description
+
+        field_dict: dict[str, Any] = {}
+        field_dict.update(self.additional_properties)
+        field_dict.update(
+            {
+                "name": name,
+                "cases": cases,
+            }
+        )
+        if description is not UNSET:
+            field_dict["description"] = description
+
+        return field_dict
+
+    @classmethod
+    def from_dict(cls: type[T], src_dict: Mapping[str, Any]) -> T:
+        from ..models.eval_case import EvalCase
+
+        d = dict(src_dict)
+        name = d.pop("name")
+
+        cases = []
+        _cases = d.pop("cases")
+        for cases_item_data in _cases:
+            cases_item = EvalCase.from_dict(cases_item_data)
+
+            cases.append(cases_item)
+
+        description = d.pop("description", UNSET)
+
+        create_eval_suite_revision_body = cls(
+            name=name,
+            cases=cases,
+            description=description,
+        )
+
+        create_eval_suite_revision_body.additional_properties = d
+        return create_eval_suite_revision_body
+
+    @property
+    def additional_keys(self) -> list[str]:
+        return list(self.additional_properties.keys())
+
+    def __getitem__(self, key: str) -> Any:
+        return self.additional_properties[key]
+
+    def __setitem__(self, key: str, value: Any) -> None:
+        self.additional_properties[key] = value
+
+    def __delitem__(self, key: str) -> None:
+        del self.additional_properties[key]
+
+    def __contains__(self, key: str) -> bool:
+        return key in self.additional_properties
